# rust-project

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260223215126_init.sql
src/: main.rs  state.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  router.rs
src/goals/: handlers.rs  router.rs
src/habits/: handlers.rs  router.rs
src/models/: goal.rs  habit.rs  mod.rs  pomodoro.rs  task.rs  user.rs
src/pomodoro/: handlers.rs  router.rs
src/tasks/: handlers.rs  router.rs
src/views/: auth.rs  mod.rs  router.rs
templates/: index.html  login.html  register.html
