[package]
name = "projekt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "derive", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
axum-extra = {version = "0.12.5", features=["typed-header"]}
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs"] }
